# Scripting-Languages

./: .gitignore
lab01/: area_of_triangle.py  wikipedia_test.py
lab02/: .gitignore  3_a_a.py  3_a_b.py  3_a_c.py  3_b.py  3_c.py  3_d.py  3_e.py  3_f.py  3_g.py  3_h.py  lab_3_a.py  lab_3_a_a.py  lab_3_a_b.py  lab_3_a_c.py  lab_3_b.py  lab_3_c.py  lab_3_d.py  lab_3_e.py  lab_3_f.py  lab_3_g.py  lab_3_h.py  main.py  reduce_request.py  retrieve_data.py  utils.py
lab03/: dictionary_practice.py  list_tuple_practice.py  main.py  utils.py
lab04/: backup.py  dir_analysis.py  envars.py  path.py  restore.py  test.txt  txt_analysis.py  utils.py
lab05/: exc01.py  exc02.py  exc03.py  exc1.py  exc2.py  exc3.py  exc4.py  exc4_1.py  exc4_2.py  exc4_3.py  exc5.py  utils.py
lab06/: AcceptedPasswordSSHLogEntry.py  ErrorSSHLogEntry.py  FailedPasswordSSHLogEntry.py  OtherSSHLogEntry.py  SSHLogEntry.py  SSHLogEntryAcceptedPassword.py  SSHLogEntryError.py  SSHLogEntryFailedPassword.py  SSHLogEntryOther.py  SSHLogJournal.py  SSHUser.py  main.py  utils.py
lab07/: exc1.py  exc2.py  exc3.py  exc4.py  exc5.py  exc6.py  utils.py
lab08/: LogBrowser.py  constants.py  file_manip.py  log_retrieval.py  pyside.py  styling.py
lab09/: SSHLogEntry.py  SSHLogJournal.py  main.py
lab10/: .gitignore  create_database.py  display_data.py  load_data.py  queries.py  rentals.sqlite3  test.py  utils.py
project/: pyproject.toml
project-setuptools/: run.py  (+1 more)
project/src/: Note.py  Notebook.py  NotebookApp.py  NotebookDB.py  NotebookGUI.py
project/src/resources/: constants.py  notebook.db
(+31 files in other folders)
