[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Notebook"
version = "0.1"
authors = [
  { name="Michał Korzeń", email="korzenmichal5@gmail.com" },
]
description = "Create and manage your notes in a simple GUI application."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "PySide6",
]

[tool.setuptools.package-data]
resources = ["*.png"]